--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -44,14 +44,16 @@
                     <div id="id_maincontent">
                         <div class="grid-container">
                             <div class="grid-item" data-detail-target="imageSliderWidth">
-                                {% if meldingen_index %}
-                                    <turbo-frame style="display: inline;" id="melding_next_vorige" src="{% url 'melding_next_vorige' melding.uuid %}"></turbo-frame>
-                                    {{ meldingen_index }}/{{ request.session.melding_count }}
-                                    <turbo-frame style="display: inline;" id="melding_next_volgend" src="{% url 'melding_next_volgend' melding.uuid %}"></turbo-frame>
-                                {% endif %}
                                 <div>{% include titel_template %}</div>
                             </div>
                             <div class="grid-item bottom-left">
+                                <div class="container__meldingnavigatie">
+                                    {% if meldingen_index %}
+                                        <span class="help-text">{{ meldingen_index }} van {{ request.session.melding_count }}</span>
+                                        <turbo-frame style="display: inline;" id="melding_next_vorige" src="{% url 'melding_next_vorige' melding.uuid %}"></turbo-frame>
+                                        <turbo-frame style="display: inline;" id="melding_next_volgend" src="{% url 'melding_next_volgend' melding.uuid %}"></turbo-frame>
+                                    {% endif %}
+                                </div>
                                 <div>
                                     {% if melding.status %}
                                         <span class="badge badge--{% if melding.status.naam == 'afgehandeld' %}green{% elif melding.status.naam == 'controle' %}yellow{% elif melding.status.naam == 'in_behandeling' %}darkblue{% elif melding.status.naam == 'geannuleerd' %}red{% else %}lightblue{% endif %}">{{ melding.status.naam|vertaal }}
