--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -5,7 +5,7 @@
 {% load vertaal from vertaal_tags %}
 {% load context_template from context_tags %}
 {% load slice_iterable from main_tags %}
-{% load mor_core_url from main_tags %}
+{% load mor_core_url replace_n from main_tags %}
 {% load render_onderwerp get_bijlagen from melding_tags %}
 {% load json_encode json_loads from json_tags %}
 {% block title %}
@@ -262,7 +262,7 @@
                                                                             <li>
                                                                                 {% comment %} @TODO @Remco omschrijving -> aanvullende_informatie. Moet dit oude veld nog migreren naar aanvullende_vragen jsonfield  {% endcomment %}
                                                                                 <h3 class="h5">Aanvullende informatie</h3>
-                                                                                <p>{{ signaal.aanvullende_informatie|safe }}</p>
+                                                                                <p>{{ signaal.aanvullende_informatie|replace_n|safe }}</p>
                                                                             </li>
                                                                         {% endif %}
                                                                     {% endwith %}
@@ -351,7 +351,7 @@
                                                                 <li>
                                                                     {% comment %} @TODO @Remco omschrijving -> aanvullende_informatie. Moet dit oude veld nog migreren naar aanvullende_vragen jsonfield  {% endcomment %}
                                                                     <h3 class="h5">Aanvullende informatie</h3>
-                                                                    <p>{{ melding.aanvullende_informatie|safe }}</p>
+                                                                    <p>{{ melding.aanvullende_informatie|replace_n|safe }}</p>
                                                                 </li>
                                                             {% endif %}
                                                         {% endwith %}
