Add fallback to melding.meta data.

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -332,10 +332,10 @@
                                                                 <h3 class="h5">Omschrijving</h3>
                                                                 <p>{{ melding.signalen_voor_melding.0.omschrijving_melder }}</p>
                                                             </li>
-                                                        {% elif melding.meta.omschrijving_kort and melding.meta.omschrijving_kort != "- geen korte omschrijving beschikbaar -" %}
+                                                        {% elif melding.meta.omschrijvingField and melding.meta.omschrijvingField != "- geen korte omschrijving beschikbaar -" %}
                                                             <li>
                                                                 <h3 class="h5">Omschrijving</h3>
-                                                                <p>{{ melding.meta.omschrijving_kort }}</p>
+                                                                <p>{{ melding.meta.omschrijvingField }}</p>
                                                             </li>
                                                         {% endif %}
                                                         {% comment %} @TODO @Remco aanvullende_vragen toegevoegd, dit is een json formatted string. {% endcomment %}
@@ -358,11 +358,11 @@
                                                                     <h3 class="h5">Aanvullende informatie</h3>
                                                                     <p>{{ melding.signalen_voor_melding.0.aanvullende_informatie|replace_n|safe }}</p>
                                                                 </li>
-                                                            {% elif melding.meta.omschrijving %}
+                                                            {% elif melding.meta.aanvullendeInformatieField %}
                                                                 <li>
                                                                     {% comment %} @TODO @Remco omschrijving -> aanvullende_informatie. Moet dit oude veld nog migreren naar aanvullende_vragen jsonfield  {% endcomment %}
                                                                     <h3 class="h5">Aanvullende informatie</h3>
-                                                                    <p>{{ melding.meta.omschrijving|replace_n|safe }}</p>
+                                                                    <p>{{ melding.meta.aanvullendeInformatieField|replace_n|safe }}</p>
                                                                 </li>
                                                             {% endif %}
                                                         {% endwith %}
