--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -7,7 +7,7 @@
 {% load slice_iterable from main_tags %}
 {% load mor_core_url replace_n from main_tags %}
 {% load render_onderwerp get_bijlagen from melding_tags %}
-{% load json_encode json_loads from json_tags %}
+{% load json_encode from json_tags %}
 {% block title %}
     Melding {{ melding.id }} | PlanR
 {% endblock title %}
@@ -237,15 +237,18 @@
                                                                     {% endif %}
                                                                 </ul>
                                                                 <ul class="list-clean">
-                                                                    {% comment %} @TODO @Remco omschrijving_kort -> omschrijving_melder  {% endcomment %}
                                                                     {% if signaal.omschrijving_melder and signaal.omschrijving_melder != "- geen korte omschrijving beschikbaar -" %}
                                                                         <li>
                                                                             <h3 class="h5">Omschrijving</h3>
                                                                             <p>{{ signaal.omschrijving_melder }}</p>
                                                                         </li>
+                                                                    {% elif signaal.meta.omschrijvingField and signaal.meta.omschrijvingField != "- geen korte omschrijving beschikbaar -" %}
+                                                                        <li>
+                                                                            <h3 class="h5">Omschrijving</h3>
+                                                                            <p>{{ signaal.meta.omschrijvingField }}</p>
+                                                                        </li>
                                                                     {% endif %}
-                                                                    {% comment %} @TODO @Remco aanvullende_vragen toegevoegd, dit is een json formatted string. {% endcomment %}
-                                                                    {% with aanvullende_vragen=signaal.aanvullende_vragen|safe|json_loads %}
+                                                                    {% with aanvullende_vragen=signaal.aanvullende_vragen %}
                                                                         {% if aanvullende_vragen %}
                                                                             {% for vraag in aanvullende_vragen %}
                                                                                 <li>
@@ -260,9 +263,13 @@
                                                                             {% endfor %}
                                                                         {% elif signaal.aanvullende_informatie %}
                                                                             <li>
-                                                                                {% comment %} @TODO @Remco omschrijving -> aanvullende_informatie. Moet dit oude veld nog migreren naar aanvullende_vragen jsonfield  {% endcomment %}
                                                                                 <h3 class="h5">Aanvullende informatie</h3>
                                                                                 <p>{{ signaal.aanvullende_informatie|replace_n|safe }}</p>
+                                                                            </li>
+                                                                        {% elif signaal.meta.aanvullendeInformatieField %}
+                                                                            <li>
+                                                                                <h3 class="h5">Aanvullende informatie</h3>
+                                                                                <p>{{ signaal.meta.aanvullendeInformatieField|replace_n|safe }}</p>
                                                                             </li>
                                                                         {% endif %}
                                                                     {% endwith %}
@@ -326,7 +333,6 @@
                                                                 {% endfor %} {% endcomment %}
                                                             </p>
                                                         </li>
-                                                        {% comment %} @TODO @Remco omschrijving_kort -> omschrijving_melder  {% endcomment %}
                                                         {% if melding.signalen_voor_melding.0.omschrijving_melder and melding.signalen_voor_melding.0.omschrijving_melder != "- geen korte omschrijving beschikbaar -" %}
                                                             <li>
                                                                 <h3 class="h5">Omschrijving</h3>
@@ -338,8 +344,7 @@
                                                                 <p>{{ melding.meta.omschrijvingField }}</p>
                                                             </li>
                                                         {% endif %}
-                                                        {% comment %} @TODO @Remco aanvullende_vragen toegevoegd, dit is een json formatted string. {% endcomment %}
-                                                        {% with aanvullende_vragen=melding.signalen_voor_melding.0.aanvullende_vragen|safe|json_loads %}
+                                                        {% with aanvullende_vragen=melding.signalen_voor_melding.0.aanvullende_vragen %}
                                                             {% if aanvullende_vragen %}
                                                                 {% for vraag in aanvullende_vragen %}
                                                                     <li>
@@ -354,13 +359,11 @@
                                                                 {% endfor %}
                                                             {% elif melding.signalen_voor_melding.0.aanvullende_informatie %}
                                                                 <li>
-                                                                    {% comment %} @TODO @Remco omschrijving -> aanvullende_informatie. Moet dit oude veld nog migreren naar aanvullende_vragen jsonfield  {% endcomment %}
                                                                     <h3 class="h5">Aanvullende informatie</h3>
                                                                     <p>{{ melding.signalen_voor_melding.0.aanvullende_informatie|replace_n|safe }}</p>
                                                                 </li>
                                                             {% elif melding.meta.aanvullendeInformatieField %}
                                                                 <li>
-                                                                    {% comment %} @TODO @Remco omschrijving -> aanvullende_informatie. Moet dit oude veld nog migreren naar aanvullende_vragen jsonfield  {% endcomment %}
                                                                     <h3 class="h5">Aanvullende informatie</h3>
                                                                     <p>{{ melding.meta.aanvullendeInformatieField|replace_n|safe }}</p>
                                                                 </li>
